# ashes

./: CMakeLists.txt  installer.sh  readme.md
src/: bar.c  bar.h  config.h  main.c
